--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <a href="#" class="btn btn-link"><i class="fab fa-tiktok fa-3x"></i></a>
                 <a href="#" class="btn btn-link"><i class="fab fa-facebook-f fa-3x"></i></a>
             </div>
-            <p class="copyright">&copy; Entre Capítulos. Todos los derechos reservados.</p>
+            <p class="copyright">&copy; Entre Capítulos y Café. Todos los derechos reservados.</p>
         </div>
     </footer>
 
