se añadieron links a iconos del footer

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
     <footer class="footer">
         <div class="container text-center">
             <div class="social-buttons mb-3">
-                <a href="#" class="btn btn-link"><i class="fab fa-instagram fa-3x"></i></a>
-                <a href="#" class="btn btn-link"><i class="fab fa-tiktok fa-3x"></i></a>
-                <a href="#" class="btn btn-link"><i class="fab fa-facebook-f fa-3x"></i></a>
+                <a href="https://www.instagram.com/entrecapitulosycafe/" class="btn btn-link"><i class="fab fa-instagram fa-3x"></i></a>
+                <a href="https://www.tiktok.com/@entrecapitulosycafe" class="btn btn-link"><i class="fab fa-tiktok fa-3x"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=61572659246260" class="btn btn-link"><i class="fab fa-facebook-f fa-3x"></i></a>
             </div>
             <p class="copyright">&copy; Entre Capítulos y Café. Todos los derechos reservados.</p>
         </div>
