Se añadieron las fuentes de texto y se estilizaron los textos

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1>AMOR PROHIBIDO, CAFÉ PERMITIDO</h1>
+            <h1>Amor prohibido, <br>
+                café permitido</h1>
             <p>Comparte un postre para dos corazones y vive un romance de Romeo y Julieta</p>
         </div>
     </section>
@@ -54,7 +55,7 @@
             <div class="row align-items-center">
                 <div class="content-left col-md-6">
                     <div class="text-content">
-                        <h2 class="promo-title">RESERVA AHORA</h2>
+                        <h2 class="promo-title">RESERVA AHORA CON</h2>
                         <p class="promo-discount">50% de descuento</p>
                         <p>Una velada romántica que incluye: Postre para dos corazones y café, para ti y tu pareja. Un momento para recordar en un ambiente inspirado en la historia de amor más icónica de todos los tiempos.</p>
                     </div>
@@ -72,7 +73,7 @@
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-md-6 price-section">
-                    <p>Oferta disponible desde 01 al 12 de febrero. ¡Reserva ahora y obtén tu 50% de descuento!</p>
+                    <p>Oferta disponible desde <br>01 al 12 de febrero. <br>  ¡Reserva ahora y obtén tu <br> 50% de descuento!</p>
                     <div class="price-box">
                         <div class="price-container">
                             <span class="original-price">S/240</span>
